--- a/GameData/RustyStar/RustyStarRockets/1.8.99.1.htm
+++ b/GameData/RustyStar/RustyStarRockets/1.8.99.1.htm
@@ -34,7 +34,49 @@ title="GitHub IO" alt="Pages" /></a></p>
 <b>For best results - DO A CLEAN INSTALL; DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/RustyStarRockets/files">CurseForge</a></p></div>
 
 <h2 id="summary">Summary</h2>
-<h3 id="changes">Changes</h3>
+<ul>
+<li>ten more parts updated
+<ul>
+<li>science
+<ul>
+<li>&lt;rsr-science-lab-1.cfg&gt;</li>
+<li>&lt;rsr-science-lab-2.cfg&gt;</li>
+<li>&lt;rsr-science-bay-material.cfg&gt;</li>
+<li>&lt;rsr-science-exp-goo.cfg&gt;</li>
+<li>&lt;rsr-science-exp-rust.cfg&gt;</li>
+</ul></li>
+<li>electrical
+<ul>
+<li>&lt;rsr-elec-reactor.cfg&gt;</li>
+<li>&lt;rsr-elec-solar-panel.cfg&gt;</li>
+<li>&lt;rsr-elec-solar-round.cfg&gt;</li>
+<li>&lt;rsr-elec-solar-stat.cfg&gt;</li>
+</ul></li>
+<li>thermal
+<ul>
+<li>&lt;rsr-therm-rad.cfg&gt;</li>
+</ul></li>
+</ul></li>
+<li>for more details, read the release notes for 1.8.99.0</li>
+<li>just doing more of the same</li>
+</ul>
+<h2 id="status-18990">Status 1.8.99.0</h2>
+<ul>
+<li>Issues
+<ul>
+<li>closes #66 - Rusty Star Rockets (RSR) 1.8.99.1-prerelease
+<code>&lt;Rust Koleum: 1st coat&gt;</code></li>
+<li>closes #67 - 1.8.99.1 Verify Legal Mumbo Jumbo</li>
+<li>closes #68 - 1.8.99.1 Update Documentation</li>
+<li>closes #69 - 1.8.99.1 Update Social Media</li>
+<li>updates #62 - Create Thumbs</li>
+<li>updates #33 - Part Localization</li>
+<li>updates #16 - English &lt;us-en.cfg&gt;</li>
+<li>updates #15 - Localization - Master</li>
+<li>updates #14 - [DRAG_CUBE]</li>
+<li>updates #11 - Part Asset Updates</li>
+</ul></li>
+</ul>
 <hr />
 <h2 id="see-more">See More</h2>
 <ul>
