--- a/GameData/RustyStar/RustyStarRockets/1.8.99.1.htm
+++ b/GameData/RustyStar/RustyStarRockets/1.8.99.1.htm
@@ -20,8 +20,9 @@ href="https://zer0kerbal.github.io/RustyStarRockets/"
 title="GitHub Pages"><img
 src="https://img.shields.io/badge/GitHub-Pages-white?style=plastic&amp;labelColor=9cf&amp;logoColor=181717&amp;logo=github/"
 title="GitHub IO" alt="Pages" /></a></p>
-<h1 id="version-18991-prerelease---thank-you-gagax-edition">Version
-1.8.99.1-prerelease - <code>&lt;Thank you GagaX&gt;</code> edition</h1>
+<h1 id="version-18991-prerelease---rust-koleum-1st-coat-edition">Version
+1.8.99.1-prerelease
+- <code>&lt;Rust Koleum: 1st coat</code> edition</h1>
 <ul>
 <li>Released
 <ul>
