--- a/GameData/RustyStar/RustyStarRockets/1.8.99.2.htm
+++ b/GameData/RustyStar/RustyStarRockets/1.8.99.2.htm
@@ -22,7 +22,7 @@ src="https://img.shields.io/badge/GitHub-Pages-white?style=plastic&amp;labelColo
 title="GitHub IO" alt="Pages" /></a></p>
 <h2 id="version-18992-prerelease---rust-koleum-2nd-coat-edition">Version
 1.8.99.2-prerelease
-- <code>&lt;Rust Koleum: 2nd coat</code> edition</h2>
+- <code>&lt;Rust Koleum: 2nd coat&gt;</code> edition</h2>
 <ul>
 <li>Released
 <ul>
