--- a/GameData/RustyStar/RustyStarRockets/ManualInstallation.htm
+++ b/GameData/RustyStar/RustyStarRockets/ManualInstallation.htm
@@ -1,6 +1,9 @@
+<!-- ManualInstallation.md v1.1.8.1
+Rusty Star Rockets (RSR)
+created: 01 Oct 2019
+updated: 29 Jul 2022 -->
 
-
-
+<!-- based upon work by Lisias -->
 
 <h1 id="rusty-star-rockets-rsr"><a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/209405-*/"
