--- a/GameData/RustyStar/RustyStarRockets/1.8.99.3.htm
+++ b/GameData/RustyStar/RustyStarRockets/1.8.99.3.htm
@@ -22,7 +22,7 @@ title="GitHub IO" alt="Pages" /></a></p>
 <ul>
 <li>Released
 <ul>
-<li>17 Mar 2023</li>
+<li>18 Mar 2023</li>
 <li>for Kerbal Space Program 1.12.5</li>
 <li>by <a href="https://github.com/zer0Kerbal">zer0Kerbal</a></li>
 </ul></li>
@@ -30,7 +30,50 @@ title="GitHub IO" alt="Pages" /></a></p>
 <div style="border:0.5px solid Tomato; background-color: #bada55; color: #FF0000; text-align:center"><h4>
 <b>For best results - DO A CLEAN INSTALL; DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/RustyStarRockets/files">CurseForge</a></p></div>
 
-<h2 id="summary">Summary</h2>
+<h2 id="summary-next-of-several-staged-updates">Summary* Next of several
+staged updates</h2>
+<ul>
+<li><p>Hard dependency is Rusty Star Shipyards (RSS)</p>
+<ul>
+<li>provides agent, flags, and other common files</li>
+</ul></li>
+<li><p>22 more parts upgraded in this release</p></li>
+<li><p>3 new parts added in this release</p></li>
+<li><p>62 total parts initially upgraded (+3 new)</p></li>
+<li><p>~127 yet to upgrade</p></li>
+<li><p>New: three (3) parts added</p>
+<ul>
+<li>Small Rusty Klaw</li>
+<li>Small Bulb</li>
+<li>Mini AIRBRAKE</li>
+</ul></li>
+<li><p>Only parts that have been updated are included</p>
+<ul>
+<li>15 Command</li>
+<li>2 Aero (1 New)</li>
+<li>2 Cargobays</li>
+<li>2 CompoundParts</li>
+<li>3 Chutes</li>
+<li>3 Control</li>
+<li>3 Coupling</li>
+<li>3 Misc</li>
+<li>4 Antenna</li>
+<li>4 Electrical</li>
+<li>4 Utility (1 New)</li>
+<li>5 Science</li>
+<li>6 Thermal</li>
+<li>9 Lights (1 New)e</li>
+</ul></li>
+<li><p>Updated GhostParts.cfg v2.0.1.0</p></li>
+<li><p>Added</p>
+<ul>
+<li>StackInlineLights.cfg v1.0.0.0</li>
+<li>RealismOverhaul.cfg v1.0.0.0 (only airbrakes)</li>
+<li>CommunityCategoryKit v1.0.0.0 (cck-lights)</li>
+</ul></li>
+<li><p>for more details, read the release notes for 1.8.99.0</p></li>
+<li><p>just doing more of the same</p></li>
+</ul>
 <h2 id="see-more">See More</h2>
 <ul>
 <li><a href="https://zer0kerbal.github.io/RustyStarRockets/"
