--- a/GameData/RustyStar/RustyStarRockets/readme.htm
+++ b/GameData/RustyStar/RustyStarRockets/readme.htm
@@ -170,7 +170,7 @@ href="https://forum.kerbalspaceprogram.com/index.php?/topic/192360-*/"
 title="ScrapYard">ScrapYard</a></p></li>
 <li><p><a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/193050-*/"
-title="Stock Inline Lights (SIL)">Stack Inline Lights (SIL)</a></p></li>
+title="Stack Inline Lights (SIL)">Stack Inline Lights (SIL)</a></p></li>
 <li><p><a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/179030-*/"
 title="TweakScale">TweakScale</a></p></li>
@@ -179,7 +179,7 @@ title="TweakScale">TweakScale</a></p></li>
 <ul>
 <li><a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/193050-*/"
-title="Stock Inline Lights (SIL)">Stack Inline Lights (SIL)</a></li>
+title="Stack Inline Lights (SIL)">Stack Inline Lights (SIL)</a></li>
 <li><a href="https://github.com/snjo/Firespitter/"
 title="Firespitter Core">Firespitter</a>
 <ul>
